--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
                 <span><i class="fas fa-chalkboard-teacher"></i></span>
                 <span>SKILLS</span>
             </h1>
-            <div class="skills-display">
+            <div id="skills-container" class="skills-display">
+
                 <div class="skill-progress">
-                    <div class="eighty-five-percent">
+                    <div class="eighty-five-percent" data-bar-width="85">
                         <div class="skill-name">
                             <span>C++</span>
                         </div>
@@ -90,7 +91,7 @@
                 </div>
 
                 <div class="skill-progress">
-                    <div class="fifty-five-percent">
+                    <div class="fifty-five-percent" data-bar-width="55">
                         <div class="skill-name">
                             <span>JAVA</span>
                         </div>
@@ -100,7 +101,7 @@
                 </div>
 
                 <div class="skill-progress">
-                    <div class="eighty-five-percent">
+                    <div class="eighty-five-percent" data-bar-width="85">
                         <div class="skill-name">
                             <span>HTML</span>
                         </div>
@@ -109,7 +110,7 @@
 
                 </div>
                 <div class="skill-progress">
-                    <div class="eighty-five-percent">
+                    <div class="eighty-five-percent" data-bar-width="85">
                         <div class="skill-name">
                             <span>CSS</span>
                         </div>
@@ -118,7 +119,7 @@
 
                 </div>
                 <div class="skill-progress">
-                    <div class="fifty-five-percent">
+                    <div class="fifty-five-percent" data-bar-width="55">
                         <div class="skill-name">
                             <span>JAVASCRIPT</span>
                         </div>
@@ -174,7 +175,7 @@
                 </div>
                 <div class="timeline-box">
                     <div class="position">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/a/a4/Indian_Institute_of_Technology_Delhi_logo.png">
+                        <img src="https://images.squarespace-cdn.com/content/v1/59364d66ebbd1a96fde735c3/1568631726434-4TTZXMLVTJNYN7R17HH8/ke17ZwdGBToddI8pDm48kJWbyFTZwbV6fYFEMyjO7JdZw-zPPgdn4jUwVcJE1ZvWEtT5uBSRWt4vQZAgTJucoTqqXjS3CfNDSuuf31e0tVHLPJBauNbJvn1q5aJBphp8Lkk2IABSZmTIZ2XFOEaSyVtO8nJtk629tZGIWiyY3XQ/TRANSPARENT+iitd+logo.png">
                         <span>Post Graduate</span>
                     </div>
                     <div class="institute">
@@ -292,6 +293,7 @@
         </section>
 
     </main>
-
+    <!-- JS -->
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
